--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "jsdom": "^9.0",
+    "json-server": "^1.0.0-alpha.23",
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0"
   }
